--- a/style.css
+++ b/style.css
@@ -22,3 +22,20 @@ border-radius: 5px;
 .div3 { grid-area: 3 / 3 / 4 / 4; }
 .div4 { grid-area: 4 / 4 / 5 / 5; }
 .div5 { grid-area: 5 / 5 / 6 / 6; }
+
+
+
+.navbar{
+    display: flex;
+    background-color: black;
+    padding: 10px 20px;
+
+}
+
+.navbar a{
+    color: white;
+    text-decoration: none;
+    padding: 10px 15px;
+    text-align:right;
+        margin-left: 400px;
+}
