--- a/style.css
+++ b/style.css
@@ -23,12 +23,19 @@ border-radius: 5px;
 .div4 { grid-area: 4 / 4 / 5 / 5; }
 .div5 { grid-area: 5 / 5 / 6 / 6; }
 
-
+html{
+    scroll-behavior: smooth;
+}
 
 .navbar{
     display: flex;
     background-color: black;
-    padding: 10px 20px;
+    max-width: 100%;
+    position:sticky;
+    top: 0;
+  left: 0;
+    z-index: 1000;
+
 
 }
 
@@ -36,6 +43,14 @@ border-radius: 5px;
     color: white;
     text-decoration: none;
     padding: 10px 15px;
-    text-align:right;
-        margin-left: 400px;
+}
+
+.hero{
+  height: 100vh;
+  background-color: aqua;
+}
+
+.doon{
+  height: 100vh;
+  background-color: rgb(230, 255, 2);
 }
